--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.5",
+        "spatie/laravel-permission": "^6.9",
         "yajra/laravel-datatables-oracle": "^10.11"
     },
     "require-dev": {
